# Azure-AI-Agent-MAF

./: .env  .env.sample  .gitignore  01_Basic_Agent.ipynb  02_Orchestrations.ipynb  03_Workflow.ipynb  04_Research.ipynb  05_Code_Interpreter.ipynb  06_Enterprise.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
