[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-agent-workshop-maf"
version = "2.0.0"
description = "Azure AI Agent Workshop - Multi-Agent Systems with Microsoft Agent Framework"
authors = [{name = "Azure AI Workshop", email = "euson@microsoft.com"}]
readme = "README_MAF.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    # Core Microsoft Agent Framework - 모든 노트북에서 필요
    "agent-framework==1.0.0b260123",
    "agent-framework-core==1.0.0b260123",
    "agent-framework-azure-ai==1.0.0b260123",
    
    # Azure Integration - Azure OpenAI 및 AI 서비스
    "azure-identity>=1.15.0",
    "azure-ai-projects>=1.0.0b11",
    "openai>=1.99.0",
    
    # Environment Management - .env 파일 로드
    "python-dotenv>=1.0.1",
    
    # Data Analysis - 데이터 처리 및 시각화
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "matplotlib>=3.8.0",
    "yfinance>=0.2.28",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    
    # HTTP and Web - API 호출
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
    
    # Jupyter Support - 노트북 실행
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    
    # Additional Tools - 데이터 모델 및 포맷팅
    "pydantic>=2.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

minimal = [
    "agent-framework-core>=1.0.0b1",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
]

azure-ai = [
    "agent-framework-azure-ai>=1.0.0b1",
]

full = [
    "agent-framework>=1.0.0b1",
    "agent-framework-azure-ai>=1.0.0b1",
    "playwright>=1.47.0",
]

[project.urls]
Homepage = "https://github.com/eunjison/Azure-AI-Agent"
Repository = "https://github.com/eunjison/Azure-AI-Agent"
Documentation = "https://learn.microsoft.com/en-us/agent-framework/"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
prerelease = "allow"
